--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-webflux')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.modelmapper:modelmapper:2.0.0')
     runtime('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
