--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/0.1
+
 spring.datasource.url= jdbc:postgresql://192.168.99.100:32771/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
